# whiteprints

./: .all-contributorsrc  .all-contributorsrc.license  .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .pyrightconfig_tox.json  .python-versions  .readthedocs.yml  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MAINTAINERS.md  README.md  REUSE.toml  SECURITY.md  bandit.yaml  codecov.yml  hatch.toml  hatch_build.py  justfile  pyproject.toml  pyrightconfig.json  pyrightconfig.json.license  pytest.ini  tox.ini  uv.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md.license  dependabot.yml  release-drafter.yml  renovate.json5
.github/ISSUE_TEMPLATE/: 1_installation_report.yml  2_bug_report.yml  3_docs_report.yml  4_feature_request.yml  5_performance_report.yml  6_devops.yml  7_refacto.yml  8_architecture.yml  bug_report.yml  config.yml  devops.yml  docs.yml  docs_report.yml  feature_request.yml  installation_report.yml  performance_report.yml  refacto.yml
.github/workflows/: auto_merge.yml  build_and_test.yml  build_wheel.yml  contributors.yml  documentation-links.yml  main.yml  publish_ghcr.yml  publish_pypi.yml  release.yml  release_drafter.yml  semantic_pull_request.yml  test.yml  tests.yml  upload_artifacts.yml
container/: Containerfile.alpine  Containerfile.containerignore  Containerfile.debian
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MAINTAINERS.md  SECURITY.md  artifacts_verification.md  conf.py  contributing_index.md  guide.md  index.md  licensing.md  licensing_faq.md  licensing_index.md  project.md  quickstart.md  readthedocs.js  usage.md
docs/_autoapi_templates/: index.rst
docs/_autoapi_templates/python/: attribute.rst  class.rst  data.rst  exception.rst  function.rst  method.rst  module.rst  package.rst  property.rst
docs/_static/: gpg-romainbrault.pub  gpg-romainbrault.pub.license  logo.svg.license
scripts/: build_container_image.py  release.py
src/whiteprints/: __init__.py  console.py  copier_run.py  debug_info.py  environment.py  loc.py  package_metadata.py  py.typed  uvx_run.py
src/whiteprints/cli/: __init__.py  __main__.py  entrypoint.py  exception.py  init.py  init_interface.py  init_types.py  logs.py
src/whiteprints/cli/command/: __init__.py  hello_world.py  init.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  cli_runner.py  git_config.py
tests/test_whiteprints/: __init__.py  test_console.py  test_debug_info.py  test_environment.py  test_loc.py  test_package_metadata.py
tests/test_whiteprints/test_cli/: __init__.py  test_entrypoint.py  test_exception.py
tests/test_whiteprints/test_cli/test_command/: __init__.py  test_hello_world.py  test_init.py
