# SPDX-FileCopyrightText: © 2024 The "Whiteprints" contributors <whiteprints@pm.me>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme>=24.1",
    "hatch-vcs>=0.4",
    "hatchling>=1.25",
]

[project]
name = "whiteprints"
description = "A Copier-based cookiecutter for creating Python projects managed by uv."
keywords = [
    "Python",
]
license = "GPL-3.0-or-later"
license-files.paths = [
    "LICENSES/GPL-3.0-or-later.txt",
]
maintainers = [
    { name = "Romain Brault", email = "" },
]
authors = [
    { name = "Romain Brault", email = "" },
]
requires-python = ">=3.9,<4.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "distro==1.9",
    "importlib-metadata==8.5; python_full_version<'3.10'",
    "python-dotenv==1.0.1",
    "rich-click==1.8.3",
    "typing-extensions==4.12.2; python_full_version<'3.12'",
    "uv==0.4.27",
]

urls.changelog = "https://github.com/whiteprints/whiteprints/releases"
urls.discussions = "https://github.com/whiteprints/whiteprints/discussions"
urls.documentation = "https://github.com/whiteprints/whiteprints"
urls.download = "https://github.com/whiteprints/whiteprints/releases"
urls.homepage = "https://github.com/whiteprints/whiteprints"
urls.integration = "https://github.com/whiteprints/whiteprints/actions"
urls.issues = "https://github.com/whiteprints/whiteprints/issues"
urls.pypi = "https://pypi.org/project/whiteprints"
urls.repository = "https://github.com/whiteprints/whiteprints"
scripts.whiteprints = "whiteprints.cli.entrypoint:whiteprints"

[tool.pyproject-fmt]
column_width = 79
indent = 4
keep_full_version = false
max_supported_python = "3.13"

[dependency-groups]
tests = [
    "beartype>=0.18.5",
    "hypothesis>=6.110.1",
    "pytest>=8.3.2",
    "pytest-html>=4.1.1",
    "pytest-md-report>=0.6.2",
    "pytest-cov>=5.0.0",
    "pytest-randomly>=3.15.0",
    "pytest-xdist>=3.6.1",
    "xdoctest>=1.2.0",
]
editor = [
    "pynvim>=0.4.3",
]
profile = [
    "scalene>=1.5.19",
]
lint = [
    { include-group = "tests" },
    "pylint>=3.2.6",
]
check-types = [
    { include-group = "tests" },
    "pyright>=1.1.386",
]
coverage = [
    "coverage>=7.6.1",
]
audit-vulnerabilities = [
    "pip-audit>=2.7.3",
]
audit-maintainability = [
    "radon>=6.0.1",
]
check-exceptions = [
    "tryceratops>=2.4.0",
]
check-maintainability = [
    "xenon>=0.9.3",
]
check-vulnerabilities = [
    "bandit>=1.7.10",
]
build-documentation = [
    "pydata-sphinx-theme>=0.16.0",
    "myst-parser[linkify]>=3.0.1",
    "sphinx>=7.4.7",
    "sphinx-click>=6.0.0",
    "sphinx-autoapi>=3.3.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-napoleon>=0.7.0",
    "sphinxcontrib-spelling>=8.0.0",
]
serve-documentation = [
    { include-group = "build-documentation" },
    "sphinx-autobuild>=2024.10.3",
]
localization = [
    "Babel>=2.16.0",
]
dev = [
    { include-group = "tests" },
    { include-group = "editor" },
    { include-group = "profile" },
    { include-group = "lint" },
    { include-group = "coverage" },
    { include-group = "audit-vulnerabilities" },
    { include-group = "audit-maintainability" },
    { include-group = "check-exceptions" },
    { include-group = "check-maintainability" },
    { include-group = "serve-documentation" },
    { include-group = "localization" },
]

[tool.uv]
managed = true
cache-keys = [
    { git = { commit = true, tags = true } },
    { file = "pyproject.toml" },
    { file = "hatch.toml" },
    { file = "hatch_build.py" },
]
